tests/ui/bitstruct_too_large.stderr
error: Too many fields: maximum supported size is 128 bits
 --> tests/ui/bitstruct_too_large.rs:5:12
  |
5 |     struct Bits {
  |            ^^^^
